--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </script>
 
 <!--  Scripts-->
-<script src="js/vue.js"></script>
+<script src="js/vue.min.js"></script>
 <script src="js/vue-router.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <!--<script src="js/materialize.min.js"></script>-->
