separating config and parsers to different files

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
 <script src="js/axios.js"></script>
 <script src="js/moment.min.js"></script>
 <script src="js/showdown.js"></script>
+<script src="js/config.js"></script>
+<script src="js/parsers.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
