--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="container">
     <div v-for="post in pagedPosts">
       <transition name="fade">      
-        <post v-bind:title="post.title" v-bind:img="post.img" v-bind:date="post.date" v-bind:load="post.load" v-bind:html="post.html"></post>
+        <blog-article v-bind:title="post.title" v-bind:img="post.img" v-bind:date="post.date" v-bind:load="post.load" v-bind:html="post.html"></blog-article>
       </transition>
     </div>
     <ul class="pagination center-align">
@@ -67,7 +67,7 @@
 <script type="text/x-template" id="recent-posts-template">
   <div class="container">
     <div v-for="post in posts">
-      <post v-bind:title="post.title" v-bind:img="post.img" v-bind:date="post.date" v-bind:load="post.load" v-bind:html="post.html"></post>
+      <blog-article v-bind:title="post.title" v-bind:img="post.img" v-bind:date="post.date" v-bind:load="post.load" v-bind:html="post.html"></blog-article>
     </div>
     <div class="section">
       <div class="row">
@@ -79,7 +79,7 @@
   </div>
 </script>
 
-<script type="text/x-template" id="post-template">
+<script type="text/x-template" id="article-template">
   <div class="section">
     <div class="row">
       <div class="col s12 center">
@@ -97,19 +97,7 @@
 
 <script type="text/x-template" id="page-template">
   <div class="container">
-    <div class="section">
-      <div class="row">
-        <div class="col s12 center">
-          <img v-if="img" class="responsive-img" v-bind:src="img" alt="Unsplashed background img 2">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h3>{{title}}</h3>
-          <div class="right-align light">{{formattedDate}}</div>
-          <div v-if="html" class="left-align content" v-html="html"></div>
-          <div v-if="!html" class="left-align content">Loading</div>
-          <div class="left-align light">EOF</div>
-        </div>
-      </div>
-    </div>
+    <blog-article v-bind:title="title" v-bind:img="img" v-bind:date="date" v-bind:load="load" v-bind:html="html"></blog-article>
   </div>
 </script>
 
@@ -129,7 +117,7 @@
 </script>
 
 <!--  Scripts-->
-<script src="js/vue.min.js"></script>
+<script src="js/vue.js"></script>
 <script src="js/vue-router.js"></script>
 <!--<script src="js/materialize.min.js"></script>-->
 <script src="js/axios.js"></script>
