some more structure changes

--- a/archiver.html
+++ b/archiver.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 <h1>Pages</h1>
-<div id="pages">
+<div id="pages"></div>
 <h1>Posts</h1>
-<div id="posts">
-</div>
+<div id="posts"></div>
+<script src="js/config.js"></script>
+<script src="js/parsers.js"></script>
+<script src="js/utils.js"></script>
 </body>
 </html>
