--- a/index.html
+++ b/index.html
@@ -30,11 +30,16 @@
             gyf304<span>@gmail.com</span>
           </p>
         </div>
+        <div class="col l6 s12">
+          <a href="/accessibility/" class="grey-text text-lighten-2">
+            Go to Accessibility / Print Version
+          </a>
+        </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made with <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
       </div>
     </div>
   </footer>
