--- a/accessibility/page.html
+++ b/accessibility/page.html
@@ -6,9 +6,9 @@
 </head>
 <body>
   <div id="app">
-    <h1>{{title}}</h1>
-    <div id="content">
-      {{html}}
+    <h1>{{page.title}}</h1>
+    <a v-bind:href="toUrl(page)">View HTML5 version.</a>
+    <div v-html="page.html">
     </div>
   </div>
   <script src="../3rdparty/js/vue.js"></script>
@@ -17,6 +17,6 @@
   <script src="../3rdparty/js/showdown.js"></script>
   <script src="../js/config.js"></script>
   <script src="../js/blog.js"></script>
-  <script src="../js/accessibility/index.js"></script>
+  <script src="../js/accessibility/page.js"></script>
 </body>
 </html>
