disable page reload on navigation to main page

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <nav class="white" role="navigation">
       <div class="nav-wrapper container">
         <a class="button-collapse show-on-large" href="#" v-on:click.prevent="active = true"><i class="material-icons">menu</i></a>
-        <a id="logo-container" class="brand-logo" href="/">{{title}}</a>
+        <a id="logo-container" class="brand-logo" href="#/">{{title}}</a>
       </div>
     </nav>
     <ul id="slide-out" class="side-nav" v-bind:class="{ active : active }">
